2008-04-18  Ben Van Mechelen  <me@benvm.be>

	* data/prefs.glade:
	* garmon/garmon_app.py:
	* garmon/prefs.py:
	    We now have a PreferencesManager class. New prefs can 
	    be registered. These prefs can then be read. It is also possible
	    to connect to a notify signal when a value is changed.

2008-04-17  Ben Van Mechelen  <me@benvm.be>

	* garmon/__init__.py:
	* garmon/garmon_app.py:
	* garmon/prefs.py:
	    Created a Preferences class from which the prefs can be obtained
	* garmon/property_object.py:
	    fixed a typo
	* garmon/widgets.py:
	* plugins/live_data/live_data.py:
	    MilWidget updates itself according to color preferences

2008-04-17  Ben Van Mechelen  <me@benvm.be>

	* garmon/__init__.py:
	* garmon/prefs.py:
	    replace print with debug()

2008-04-17  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/prefs.py:
	    renamed GarmonPrefs to PrefsDialog

2008-04-17  Ben Van Mechelen  <me@benvm.be>

	* data/garmon.schemas:
	* data/prefs.glade:
	* garmon/prefs.py:
	* garmon/widgets.py:
	* plugins/live_data/live_data.py:
	    Added preferences for the colors of the MIL widget

2008-04-17  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py:
	    LiveData now uses the new MILWidget class 

2008-04-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/widgets.py:
	    Created a new MILWidget class

2008-04-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/sensor.py:
	* plugins/live_data/live_data.py:
	    Fixed a bug in the MIL LiveDataView

2008-04-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    fixed some import errors
	* garmon/scheduler.py:
	    Add a oneshot queue

2008-04-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/scheduler.py:
	    Add a QueueItem class. We now add OBDData with the same pid
	    to the same QueueItem so we have to query the device only once.

2008-04-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/plugin_manager.py: