@@ -1,5 +1,15 @@
 2008-04-18  Ben Van Mechelen  <me@benvm.be>
 
+	* garmon/garmon_app.py:  
+	* garmon/plugin_manager.py:
+	    Use the new PreferencesManager
+	    
+	* garmon/prefs.py:
+	    Get rid of gclient in PrefsDialog
+
+
+2008-04-18  Ben Van Mechelen  <me@benvm.be>
+
 	* data/prefs.glade:
 	* garmon/garmon_app.py:
 	* garmon/prefs.py:
